# XGit

./: .gitignore  CMakeLists.txt  README.md  main.cpp  setup.sh  xgit
.github/workflows/: cmake.yml
headers/login/: login.h
lib/login/: login.lib
release/: xgit
src/headers/: branch.h  checkout.h  commit.h  github_login.h  init.h  inits.h  log.h  login.h  pull.h  push.h  see_branch.h  stage.h  status.h  utils.h  x_git_init.h
src/lib/: branch.lib  checkout.lib  commit.lib  github_login.lib  inits.lib  log.lib  login.lib  pull.lib  push.lib  see_branch.lib  stage.lib  status.lib  utils.lib  x_git_init.lib
